@@ -338,6 +338,7 @@ Add .hxx and .hpp as valid file extension for CPD - Thanks to Ryan Pavlik
 Add options to to the CPD command line task - Thanks to Cd-Man
 Add C# support for CPD - thanks to Florian Bauer
 Fix small bug in Rule Designer UI
+Performance enhacement when parsing Javadoc (Patch ID: 3217201), thanks to Cd-Man
 
 Other changes:
 Rule property API upgrades:
